--- a/src/main/resources/dev/fraco/minikeep/login.fxml
+++ b/src/main/resources/dev/fraco/minikeep/login.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: linear-gradient(to top,#000, #434343);" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Login">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: linear-gradient(to top,#000, #434343);" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Login">
     <VBox layoutX="423.0" layoutY="146.0" prefHeight="428.0" prefWidth="434.0" style="-fx-background-color: #282828;" styleClass="pretty-box">
         <padding>
             <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
@@ -35,7 +35,7 @@
                                 </Stop>
                                 <Stop offset="1.0">
                                     <color>
-                                        <Color red="1.0" green="0.7333333492279053" />
+                                        <Color red="1.0" green="0.9361185431480408" blue="0.7604445815086365" />
                                     </color>
                                 </Stop>
                             </stops>
@@ -47,7 +47,7 @@
             </Label>
         </VBox>
         <VBox prefHeight="272.0" prefWidth="373.0" translateY="15.0">
-            <Label style="-fx-font-weight: bold;-fx-font-size: 14px;" text="Email" textFill="#ddc7a1">
+            <Label styleClass="input-label" text="Email">
             </Label>
             <TextField fx:id="emailField" onAction="#tryToLogin" promptText="sample@domain.cl" styleClass="common-text-input">
                 <opaqueInsets>
@@ -60,7 +60,7 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
             </TextField>
-            <Label style="-fx-font-weight: bold;" text="Contraseña" textFill="#ddc7a1">
+            <Label styleClass="input-label" text="Contraseña" textFill="#ddc7a1">
             </Label>
             <PasswordField fx:id="passwordField" onAction="#tryToLogin" promptText="**********" styleClass="common-text-input">
                 <padding>
