--- a/src/main/resources/dev/fraco/minikeep/sign-in.fxml
+++ b/src/main/resources/dev/fraco/minikeep/sign-in.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -8,120 +9,107 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #282828;" xmlns="http://javafx.com/javafx/20" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.SignIn">
-   <VBox alignment="CENTER" layoutX="341.0" prefHeight="154.0" prefWidth="317.0">
-      <Label text="Crear Cuenta" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="43.0"/>
-         </font>
-      </Label>
-   </VBox>
-   <VBox layoutX="350.0" layoutY="154.0" prefHeight="448.0" prefWidth="300.0">
-      <Label text="Nombre" textFill="#ddc7a1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="firstNameInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label text="Apellido" textFill="#ddc7a1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="lastNameInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label text="Numero de matricula" textFill="#ddc7a1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="registrationNumberInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label text="Correo" textFill="#ddc7a1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="emailInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label text="Telefono" textFill="#ddc7a1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="phoneInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
-      <Label text="Fecha de Nacimiento" textFill="#ddc7a1">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <DatePicker fx:id="dateInput" style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
-         <VBox.margin>
-            <Insets bottom="20.0" />
-         </VBox.margin>
-      </DatePicker>
-      <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0" style="-fx-background-color: #cc241d; -fx-border-radius: 8;" visible="false">
-         <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
-         </VBox.margin>
-         <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="57.0" prefWidth="300.0" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
-            <font>
-               <Font name="System Bold" size="13.0" />
-            </font>
-         </Label>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-         <Button mnemonicParsing="false" onAction="#backHandler" text="Volver Atras" />
-         <Button mnemonicParsing="false" onAction="#submitHandler" text="Crear Cuenta" />
-      </HBox>
-   </VBox>
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d2021;" stylesheets="@css/styles.css"
+            xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="dev.fraco.minikeep.controllers.SignIn">
+    <VBox layoutX="420.0" layoutY="49.0" prefHeight="533.0" prefWidth="425.0" style="-fx-background-color: #282828;"
+          styleClass="pretty-box">
+        <Label alignment="CENTER" prefHeight="19.0" prefWidth="421.0"
+               style="-fx-font-family: OpenSans; -fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #ffbb00;"
+               text="Crear Cuenta" textAlignment="CENTER" textFill="#ddc7a1">
+            <padding>
+                <Insets bottom="20.0"/>
+            </padding>
+        </Label>
+        <Label styleClass="input-label" text="Nombre" textFill="#ddc7a1">
+        </Label>
+        <TextField fx:id="firstNameInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+        </TextField>
+        <Label styleClass="input-label" text="Apellido" textFill="#ddc7a1">
+
+        </Label>
+        <TextField fx:id="lastNameInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+
+        </TextField>
+        <Label styleClass="input-label" text="Numero de matricula" textFill="#ddc7a1">
+
+        </Label>
+        <TextField fx:id="registrationNumberInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+
+        </TextField>
+        <Label styleClass="input-label" text="Correo" textFill="#ddc7a1">
+
+        </Label>
+        <TextField fx:id="emailInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+
+        </TextField>
+        <Label styleClass="input-label" text="Telefono" textFill="#ddc7a1">
+
+        </Label>
+        <TextField fx:id="phoneInput" styleClass="common-text-input">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+
+        </TextField>
+        <Label styleClass="input-label" text="Fecha de Nacimiento" textFill="#ddc7a1">
+
+        </Label>
+        <DatePicker fx:id="dateInput" prefHeight="31.0" prefWidth="409.0"
+                    style="-fx-background-color: #1D2021; -fx-text-fill: #d4be98;">
+            <VBox.margin>
+                <Insets bottom="20.0"/>
+            </VBox.margin>
+        </DatePicker>
+        <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0"
+              style="-fx-background-color: #cc241d; -fx-border-radius: 8;" visible="false">
+            <VBox.margin>
+                <Insets bottom="10.0" top="10.0"/>
+            </VBox.margin>
+            <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="57.0" prefWidth="300.0"
+                   text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
+
+            </Label>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+            <Button mnemonicParsing="false" onAction="#backHandler" text="Volver Atras">
+                <styleClass>
+                    <String fx:value="common-btn"/>
+                    <String fx:value="error-btn"/>
+                </styleClass>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#submitHandler" styleClass="common-btn" text="Crear Cuenta"/>
+        </HBox>
+        <padding>
+            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
+        </padding>
+    </VBox>
 </AnchorPane>
